# compilers-course-hw

./: .gitignore  CMakeLists.txt
01-naive-interpreter/: CMakeLists.txt  driver.cpp  driver.hh  main.cpp  parser.y  scanner.h  scanner.l
01-naive-interpreter/exceptions/: exceptions.h
01-naive-interpreter/interpreter_errors/: error.h
src/: CMakeLists.txt  driver.cpp  driver.hh  exceptions.h  main.cpp  parser.y  scanner.l
src/grammar/: base_tree_element.h  base_treee_element.cpp  elements.h  forward_decl.h  main_class.cpp  main_class.h  program.cpp  program.h  statement_list.cpp  statement_list.h
src/grammar/assignments/: array_element_assignment.cpp  array_element_assignment.h  assignment.cpp  assignment.h  variable_assignment.cpp  variable_assignment.h
src/grammar/condition_clauses/: condition_clause.h  if_clause.cpp  if_clause.h  if_else_clause.cpp  if_else_clause.h
src/grammar/expressions/: and_expression.cpp  and_expression.h  array_element_expression.cpp  array_element_expression.h  boolean_array_allocation_expression.cpp  boolean_array_allocation_expression.h  boolean_value_expression.cpp  boolean_value_expression.h  equals_expression.cpp  equals_expression.h  expression.cpp  expression.h  expression_types.h  greater_expression.cpp  greater_expression.h  identifier_expression.cpp  identifier_expression.h  int_array_allocation_expression.cpp  int_array_allocation_expression.h  int_value_expression.cpp  int_value_expression.h  length_expression.cpp  length_expression.h  less_expression.cpp  less_expression.h  minus_expression.cpp  minus_expression.h  negation_expression.cpp  negation_expression.h  or_expression.cpp  or_expression.h  parentheses_expression.cpp  parentheses_expression.h  percent_expression.cpp  percent_expression.h  plus_expression.cpp  plus_expression.h  slash_expression.cpp  slash_expression.h  star_expression.cpp  (+3 more)
src/grammar/statements/: assert_statement.cpp  assert_statement.h  assignment_statement.cpp  assignment_statement.h  condition_clause_statement.cpp  condition_clause_statement.h  empty_statement.cpp  empty_statement.h  print_statement.cpp  print_statement.h  scope_statement.cpp  scope_statement.h  statement.cpp  statement.h  variable_declaration_statement.cpp  variable_declaration_statement.h  while_cycle_statement.cpp  while_cycle_statement.h
src/grammar/statements/condition_clauses/: condition_clause.cpp  condition_clause.h  if_clause.cpp  if_clause.h  if_else_clause.cpp  if_else_clause.h
src/grammar/variable_declarations/: boolean_array_declaration.cpp  boolean_array_declaration.h  boolean_variable_declaration.cpp  boolean_variable_declaration.h  int_array_declaration.cpp  int_array_declaration.h  int_variable_declaration.cpp  int_variable_declaration.h  variable_declaration.cpp  variable_declaration.h
src/interpreter_errors/: compilation_error.h  error.h  runtime_error.h
src/symbol_table/: scope_layer.cpp  scope_layer.h
src/types/: array.h  array_inl.h  basic_type.cpp  basic_type.h  boolean.cpp  boolean.h  int.cpp  int.h  type.h  types.h
src/visitors/: interpreter.cpp  interpreter.h  print_visitor.cpp  print_visitor.h  symbol_tree_visitor.cpp  symbol_tree_visitor.h  template_visitor.cpp  template_visitor.h  type_check_visitor.cpp  type_check_visitor.h  visitor.cpp  visitor.h  visitors.h
